# WynPlan

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
include/: addsubjectdialog.h  assignprofessordialog.h  definitions.h  homepage.h  inicialconfig.h  mainwindow.h  menuwindow.h  netgraph.h  networkgraph.h  schedulesolver.h  schedulewindow.h  sectiondialog.h  sectionwindow.h  studyplanwindow.h  teacherdialog.h  teachereditordialog.h  teacherswindow.h
resources/: assigments.json  assign.json  flujograma.json  teachers.json
src/: addsubjectdialog.cpp  assignprofessordialog.cpp  definitions.cpp  homepage.cpp  inicialconfig.cpp  main.cpp  mainwindow.cpp  menuwindow.cpp  netgraph.cpp  networkgraph.cpp  schedulewindow.cpp  sectiondialog.cpp  sectionwindow.cpp  studyplanwindow.cpp  teacherdialog.cpp  teachereditordialog.cpp  teacherswindow.cpp
ui/: addsubjectdialog.ui  assignprofessordialog.ui  homepage.ui  inicialconfig.ui  schedulewindow.ui  sectiondialog.ui  sectionwindow.ui  studyplanwindow.ui  teacherdialog.ui  teachereditordialog.ui  teacherswindow.ui  teacherwindow.ui
